# GodotVideoConverterPy

./: .gitignore  LICENSE  README.md  gvc.spec  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build_linux.sh  build_windows.ps1
src/godot_video_converter_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/gvc/: __main__.py  atlas.py  convert.py  ffmpeg_paths.py  gui.py  i18n.py  models.py  probe.py  recommendations.py  runner.py  settings.py
